@@ -1,0 +1,155 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta http-equiv="Content-Style-Type" content="text/css">
+<title></title>
+<meta name="Generator" content="Cocoa HTML Writer">
+<meta name="CocoaVersion" content="949.54">
+<style type="text/css">
+p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica}
+p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; min-height: 14.0px}
+p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco; min-height: 12.0px}
+p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; color: #001fe8}
+p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 14.0px Helvetica; min-height: 17.0px}
+p.p6 {margin: 0.0px 0.0px 0.0px 57.0px; text-indent: -57.0px; font: 14.0px Helvetica}
+p.p7 {margin: 0.0px 0.0px 0.0px 57.0px; text-indent: -57.0px; font: 12.0px Helvetica; min-height: 14.0px}
+p.p8 {margin: 0.0px 0.0px 0.0px 57.0px; text-indent: -57.0px; font: 12.0px Helvetica}
+p.p9 {margin: 0.0px 0.0px 0.0px 57.0px; text-indent: -57.0px; font: 9.0px Monaco; min-height: 12.0px}
+p.p10 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; color: #2c52c3; min-height: 14.0px}
+p.p11 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco; color: #902f20}
+p.p12 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco}
+p.p13 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco; color: #9d281b}
+span.s1 {font: 18.0px Helvetica}
+span.s2 {color: #1e49cd}
+span.s3 {color: #284599}
+span.s4 {color: #214fdb}
+span.s5 {color: #000000}
+span.s6 {text-decoration: underline}
+span.s7 {color: #062cb0}
+span.s8 {color: #606060}
+span.s9 {color: #0024b5}
+span.s10 {color: #9d281b}
+span.s11 {color: #902f20}
+span.Apple-tab-span {white-space:pre}
+</style>
+</head>
+<body>
+<p class="p1"><span class="s1"><b>SCAnimationView<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span></b></span><b>user-definable view<span class="Apple-tab-span">	</span>that animates</b></p>
+<p class="p2"><br></p>
+<p class="p1"><b>Inherits from: </b><a href="SC://Object"><span class="s2"><b>Object</b></span></a><b> : </b><a href="SC://SCView"><span class="s2"><b>SCView</b></span></a><span class="s3"><b> : </b><a href="SC://SCUserView"><span class="s4"><b>SCUserView</b></span></a></span></p>
+<p class="p3"><br></p>
+<p class="p2"><br></p>
+<p class="p1">SCAnimationView is a <a href="SC://SCUserView"><span class="s4">SCUserView</span></a> that refreshes itself at a constant rate.</p>
+<p class="p1">With thisProcess.setDeferredTaskInterval(1/fps) you can set the global framerate. The default is 60fps.</p>
+<p class="p2"><br></p>
+<p class="p2"><br></p>
+<p class="p4"><span class="s5"><b>See also: </b><a href="SC://GUI-Overview"><span class="s6">GUI-Overview</span></a>, <a href="SC://SCWindow"><span class="s6">SCWindow</span></a>, <a href="SC://Pen"><span class="s6">Pen</span></a>, <a href="SC://Color"><span class="s6">Color</span></a>, and <a href="SC://String"><span class="s6">String</span></a></span></p>
+<p class="p2"><br></p>
+<p class="p5"><br></p>
+<p class="p6"><b>Accessing Instance and Class Variables</b></p>
+<p class="p7"><span class="Apple-tab-span">	</span></p>
+<p class="p7"><span class="Apple-tab-span">	</span></p>
+<p class="p8"><b><span class="Apple-tab-span">	</span>drawFunc_(arg1)</b></p>
+<p class="p8"><b><span class="Apple-tab-span">	</span>drawFunc</b></p>
+<p class="p7"><b><span class="Apple-tab-span">	</span></b><span class="Apple-tab-span">	</span></p>
+<p class="p8"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>This works the same as for SCUserView, except that it also sends an endless frame counter (Integer)</p>
+<p class="p8"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>as the second argument to the arg1 function.</p>
+<p class="p7"><span class="Apple-tab-span">	</span></p>
+<p class="p8"><b><span class="Apple-tab-span">	</span>showInfo_(bool)</b></p>
+<p class="p8"><b><span class="Apple-tab-span">	</span>showInfo</b></p>
+<p class="p7"><b><span class="Apple-tab-span">	</span></b><span class="Apple-tab-span">	</span></p>
+<p class="p8"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>Enable/disable the average frame rate calculations in the upper left corner.</p>
+<p class="p9"><br></p>
+<p class="p7"><b><span class="Apple-tab-span">	</span></b></p>
+<p class="p6"><b>Examples</b></p>
+<p class="p5"><br></p>
+<p class="p10"><br></p>
+<p class="p11">//--</p>
+<p class="p12">(</p>
+<p class="p12"><span class="s7">var</span> width = 400, height = 400, mx = 0, my = 0;</p>
+<p class="p12"><span class="s7">var</span> win = <span class="s7">Window</span>(<span class="s8">"drag mouse test"</span>, <span class="s7">Rect</span>(100, 200, width, height));</p>
+<p class="p12">u = <span class="s7">AnimationView</span>(win, <span class="s7">Rect</span>(0, 0, width, height));</p>
+<p class="p12">u.background = <span class="s7">Color</span>.black;</p>
+<p class="p12">u.showInfo = <span class="s7">true</span>;</p>
+<p class="p12">u.drawFunc = {<span class="s7">|view, i|</span></p>
+<p class="p12"><span class="Apple-tab-span">	</span><span class="s7">Pen</span>.color = <span class="s7">Color</span>.white;</p>
+<p class="p12"><span class="Apple-tab-span">	</span><span class="s7">Pen</span>.moveTo(<span class="s7">Point</span>(my, mx));</p>
+<p class="p12"><span class="Apple-tab-span">	</span>100.do{<span class="s7">|j|</span></p>
+<p class="p12"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s7">var</span> x = sin(i*0.04.neg+j)*(5*j)+mx;</p>
+<p class="p12"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s7">var</span> y = cos(i*0.05+j)*(5*j)+my;</p>
+<p class="p12"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s7">Pen</span>.lineTo(<span class="s7">Point</span>(y, x));</p>
+<p class="p12"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s7">Pen</span>.addOval(<span class="s7">Rect</span>(x, y, j, j));</p>
+<p class="p12"><span class="Apple-tab-span">	</span>};</p>
+<p class="p12"><span class="Apple-tab-span">	</span><span class="s7">Pen</span>.fillStroke;</p>
+<p class="p12">};</p>
+<p class="p12">u.mouseDownAction = {<span class="s7">|v, x, y|</span></p>
+<p class="p12"><span class="Apple-tab-span">	</span>mx = x;</p>
+<p class="p12"><span class="Apple-tab-span">	</span>my = y;</p>
+<p class="p12">};</p>
+<p class="p12">u.mouseMoveAction = u.mouseDownAction;</p>
+<p class="p12">win.front;</p>
+<p class="p12">)</p>
+<p class="p3"><br></p>
+<p class="p12">u.showInfo = <span class="s7">false</span></p>
+<p class="p12">u.showInfo = <span class="s7">true</span></p>
+<p class="p3"><br></p>
+<p class="p11">//close the window to stop</p>
+<p class="p3"><br></p>
+<p class="p3"><br></p>
+<p class="p3"><br></p>
+<p class="p11">//--</p>
+<p class="p12">(</p>
+<p class="p12"><span class="s7">var</span> width = 400, height = 400, xspeed = 3, yspeed = 2, x = width*0.5, y = height*0.5;</p>
+<p class="p12"><span class="s7">var</span> win = <span class="s7">Window</span>(<span class="s8">"ball"</span>, <span class="s7">Rect</span>(100, 200, width, height));</p>
+<p class="p12">u = <span class="s7">AnimationView</span>(win, <span class="s7">Rect</span>(0, 0, width, height));</p>
+<p class="p12">u.background = <span class="s7">Color</span>.black;</p>
+<p class="p12">u.showInfo = <span class="s7">true</span>;</p>
+<p class="p12">u.drawFunc = {<span class="s7">|view, i|</span></p>
+<p class="p12"><span class="Apple-tab-span">	</span>if(x&lt;0 or:{x&gt;width}, {xspeed = 0-xspeed});</p>
+<p class="p12"><span class="Apple-tab-span">	</span>if(y&lt;0 or:{y&gt;height}, {yspeed = 0-yspeed});</p>
+<p class="p12"><span class="Apple-tab-span">	</span>x = x+xspeed;</p>
+<p class="p12"><span class="Apple-tab-span">	</span>y = y+yspeed;</p>
+<p class="p12"><span class="Apple-tab-span">	</span><span class="s7">Pen</span>.fillColor = <span class="s7">Color</span>.white;</p>
+<p class="p12"><span class="Apple-tab-span">	</span><span class="s7">Pen</span>.fillOval(<span class="s7">Rect</span>.aboutPoint(<span class="s7">Point</span>(x, y), 8, 8));</p>
+<p class="p12">};</p>
+<p class="p11">//u.clearOnRefresh = false;</p>
+<p class="p12">win.front;</p>
+<p class="p12">)</p>
+<p class="p3"><br></p>
+<p class="p11"><span class="s5">(<span class="Apple-tab-span">	</span></span>//replace the drawFunc above while running</p>
+<p class="p12">u.drawFunc = {<span class="s7">|view, i|</span></p>
+<p class="p12"><span class="Apple-tab-span">	</span><span class="s7">Pen</span>.fillColor = <span class="s7">Color</span>.red;</p>
+<p class="p12"><span class="Apple-tab-span">	</span><span class="s7">Pen</span>.fillOval(<span class="s7">Rect</span>(200, 200, sin(i*0.031)*200, sin(i*0.044)*200));</p>
+<p class="p12"><span class="Apple-tab-span">	</span><span class="s7">Pen</span>.fillOval(<span class="s7">Rect</span>(200, 200, sin(i*0.052)*200, sin(i*0.065)*200));</p>
+<p class="p12"><span class="Apple-tab-span">	</span><span class="s7">Pen</span>.fillOval(<span class="s7">Rect</span>(200, 200, sin(i*0.073)*200, sin(i*0.086)*200));</p>
+<p class="p12">}</p>
+<p class="p12">)</p>
+<p class="p3"><br></p>
+<p class="p11">//close the window to stop</p>
+<p class="p3"><br></p>
+<p class="p3"><br></p>
+<p class="p3"><br></p>
+<p class="p11">//--</p>
+<p class="p12">(</p>
+<p class="p12"><span class="s9">var</span> ani, cnt = 0, n = 30;</p>
+<p class="p12">w = <span class="s9">Window</span>(<span class="s8">"circ"</span>, <span class="s9">Rect</span>(100, 200, 700, 400), <span class="s9">false</span>, <span class="s9">false</span>);<span class="Apple-tab-span">	</span><span class="s10">//not resizable, no border</span></p>
+<p class="p12">ani = <span class="s9">AnimationView</span>(w, <span class="s9">Rect</span>(0, 0, 700, 400));</p>
+<p class="p12">ani.background= <span class="s9">Color</span>.black;</p>
+<p class="p12">ani.drawFunc = {</p>
+<p class="p12"><span class="Apple-tab-span">	</span><span class="s9">Pen</span>.fillColor = <span class="s9">Color</span>.blue;</p>
+<p class="p12"><span class="Apple-tab-span">	</span><span class="s9">Pen</span>.strokeColor = <span class="s9">Color</span>.white;</p>
+<p class="p12"><span class="Apple-tab-span">	</span>n.do{<span class="s9">|i|</span></p>
+<p class="p13"><span class="s5"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span></span>//Pen.addOval(Rect(cnt*(i+1)%700, cnt/(i+1)%400, 50, 50));</p>
+<p class="p13"><span class="s5"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span></span>//Pen.addOval(Rect(sin(cnt+i/5)*300+325, cnt/(i+1)%400, 50, 50));</p>
+<p class="p12"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s9">Pen</span>.addOval(<span class="s9">Rect</span>(sin(cnt+i/5)*150+350, cos(cnt-i/10)*150+200, 50, 50));</p>
+<p class="p12"><span class="Apple-tab-span">	</span>};</p>
+<p class="p12"><span class="Apple-tab-span">	</span><span class="s9">Pen</span>.draw(3);</p>
+<p class="p12"><span class="Apple-tab-span">	</span>cnt = cnt+0.3;</p>
+<p class="p12">};</p>
+<p class="p12">w.front;</p>
+<p class="p12">)</p>
+<p class="p3"><br></p>
+<p class="p12">w.close;<span class="Apple-tab-span">	</span><span class="s11">//to stop</span></p>
+</body>
+</html>
